@startuml PB138 - ERD Full Project

!pragma ratio 0.55
skinparam linetype ortho
hide circle
hide methods
hide stereotypes

entity Subject {
    Id : bigint <<PK>>
    ---
    Name : varchar(255)
    Teacher : varchar(255)
    Code : varchar(64) <<UNIQUE>>
    Archived : boolean
    CreatedAt : timestamp
    UpdatedAt : timestamp
}

entity Task {
    Id : bigint <<PK>>
    SubjectId : bigint <<FK>>
    ---
    Title : varchar(255)
    Done : boolean
    CreatedAt : timestamp
    UpdatedAt : timestamp
}

entity Event {
    Id : bigint <<PK>>
    SubjectId : bigint <<FK>>
    ---
    Title : varchar(255)
    Date : date
    Time : varchar(64)
    Location : varchar(255)
    Icon : varchar(64)
    Accent : enum(AccentType)
    CreatedAt : timestamp
    UpdatedAt : timestamp
}

entity FileRecord {
    Id : bigint <<PK>>
    SubjectId : bigint <<FK>>
    ---
    Name : varchar(255)
    Size : varchar(64)
    AddedLabel : varchar(64)
    Category : enum(FileCategory)
    Shared : boolean
    CreatedAt : timestamp
    UpdatedAt : timestamp
}

entity Profile {
    Id : bigint <<PK>>
    ---
    FullName : varchar(255)
    Email : varchar(255)
    School : varchar(255)
    StudyMajor : varchar(255)
    StudyYear : varchar(100)
    StudyType : varchar(100)
    AvatarDataUrl : text
    CreatedAt : timestamp
    UpdatedAt : timestamp
}

entity AuditLog {
    Id : bigint <<PK>>
    SubjectId : bigint <<FK>>
    EntityId : bigint
    ---
    EntityType : enum(EntityType)
    Action : enum(AuditAction)
    Payload : json
    CreatedAt : timestamp
}

entity AccentType {
    Value : enum <<PK>>
    ---
    primary
    amber
    emerald
}

entity FileCategory {
    Value : enum <<PK>>
    ---
    folder
    pdf
    image
    document
    other
}

entity EntityType {
    Value : enum <<PK>>
    ---
    SUBJECT
    FILE
    PROFILE
    TASK
    EVENT
}

entity AuditAction {
    Value : enum <<PK>>
    ---
    CREATE
    UPDATE
    DELETE
    REPLACE_SYNC
}

Subject ||--o{ Task : has >
Subject ||--o{ Event : schedules >
Subject ||--o{ FileRecord : stores >
Subject ||--o{ AuditLog : scopes >

Task }o--|| Subject : belongsTo >
Event }o--|| Subject : belongsTo >
FileRecord }o--|| Subject : belongsTo >
AuditLog }o--o| Subject : relatedTo >

Event }o--|| AccentType : uses >
FileRecord }o--|| FileCategory : typedAs >
AuditLog }o--|| EntityType : tracks >
AuditLog }o--|| AuditAction : performs >

note bottom
Datový model vychází z Prisma schématu v server/prisma/schema.prisma.
Profile je singleton tabulka (aplikačně vynuceno přes API), ne FK navázaná na Subject.
AuditLog pokrývá historii změn pro SUBJECT/FILE/PROFILE/TASK/EVENT.
end note

@enduml
